--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,9 @@
   <meta name="msapplication-tap-highlight" content="no" />
 
   <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
-
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB5bcNd-PzqwhnPhVdXp6bLRnLBLzA0neo"
+    async></script>
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
